<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/info_layout_root"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<ImageView
			android:src="@drawable/gtranslator"
			android:layout_marginLeft="5dp"
			android:layout_marginTop="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:id="@+id/version"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_version"
			android:textColor="#ffffff"
			android:textSize="22dp"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:id="@+id/updatedate"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_update_date"
			android:textColor="#ffffff"
			android:textSize="18dp"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:id="@+id/copyright"
			android:layout_marginLeft="5dp"
			android:layout_marginTop="15dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_copyright"
			android:textColor="#ffffff"
			android:textSize="15dp"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:id="@+id/allrightreserved"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_all_right_reserved"
			android:textColor="#ffffff"
			android:textSize="15dp"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:id="@+id/contact"
			android:layout_marginLeft="5dp"
			android:layout_marginTop="15dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_contact"
			android:textColor="#ffffff"
			android:textSize="22dp"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<ImageView
			android:src="@drawable/f_logo"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxHeight="20dp"
			/>
		<TextView
			android:id="@+id/blog"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_facebook"
			android:textColor="#ffffff"
			android:textSize="15dp"
			/>
		<TextView
			android:id="@+id/blog_url"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_facebook_url"
			android:textColor="#ffffff"
			android:textSize="15dp"
			android:clickable="true"
			android:linksClickable="true"
			android:autoLink="web"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<ImageView
			android:src="@drawable/tweet"
			android:layout_marginLeft="10dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxHeight="20dp"
			/>
		<TextView
			android:id="@+id/twitter"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_twitter"
			android:textColor="#ffffff"
			android:textSize="15dp"
			/>
		<TextView
			android:id="@+id/twitter_url"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_twitter_url"
			android:textColor="#ffffff"
			android:textSize="15dp"
			android:clickable="true"
			android:linksClickable="true"
			android:autoLink="web"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<ImageView
			android:src="@drawable/mail"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxHeight="20dp"
			/>
		<TextView
			android:id="@+id/email"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_email"
			android:textColor="#ffffff"
			android:textSize="15dp"
			/>
		<TextView
			android:id="@+id/email_address"
			android:layout_marginLeft="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/info_application_email_address"
			android:textColor="#ffffff"
			android:textSize="15dp"
			android:clickable="true"
			android:linksClickable="true"
			android:autoLink="email"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<TextView
			android:id="@+id/livecast"
			android:gravity="center"
			android:layout_marginTop="20dp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/info_application_site"
			android:textColor="#ffffff"
			android:textSize="18dp"
			android:clickable="true"
			android:linksClickable="true"
			android:autoLink="web"
			/>
	</LinearLayout>
</LinearLayout>
