<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:gTranslator="http://schemas.android.com/apk/res/asia.live_cast.translator.android"
	android:id="@+id/tweetLayout"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#EEEEEE"
	>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="left"
		android:layout_gravity="center_vertical"
		android:layout_marginTop="5dp"
		>
		<!--<ImageView
			android:src="@drawable/tweet"
			android:layout_marginLeft="10dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<TextView
			android:text="@string/tweet_header_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="22dp"
			android:layout_marginLeft="5dp"
			android:textColor="#000000"
			/>-->
	</LinearLayout>
	<EditText
		android:id="@+id/status" 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:layout_margin="5dp"
	    android:inputType="textMultiLine" 
	    android:gravity="top"
	    />
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="right"
		>
		<TextView
			android:text="@string/tweet_status_count"
			android:id="@+id/counter"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
	    	android:layout_marginRight="5dp"
			android:textSize="18dp"
			android:textColor="#7C1313"
			/>
		<Button
			android:text="@string/tweet_button_text"
			android:id="@+id/tweet" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			/>
		<Button
			android:text="@string/tweet_cancel_button_text"
			android:id="@+id/cancel" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
	    	android:layout_marginRight="5dp"
			/>
	</LinearLayout>
	<!--<com.admob.android.ads.AdView
		android:id="@+id/ad"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		gTranslator:backgroundColor="#000000"
		gTranslator:primaryTextColor="#FFFFFF"
		gTranslator:secondaryTextColor="#CCCCCC"
		/>-->
</LinearLayout>

